--- a/package.json
+++ b/package.json
@@ -1,34 +1,19 @@
 {
-  "name": "jcropwidget",
-  "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-compass": "~0.5.0",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-bower-requirejs": "~0.7.0",
-    "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-rev": "~0.1.0",
-    "grunt-autoprefixer": "~0.2.0",
-    "grunt-usemin": "~0.1.10",
-    "grunt-mocha": "~0.4.0",
-    "grunt-modernizr": "~0.3.0",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-concurrent": "~0.3.0",
-    "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
-  },
-  "engines": {
-    "node": ">=0.8.0"
-  }
+	"name": "jquery-boilerplate",
+	"title": "jQuery Boilerplate",
+	"description": "A jump-start for jQuery plugins development.",
+	"author": "Zeno Rocha",
+	"homepage": "https://github.com/jquery-boilerplate/boilerplate/",
+	"version": "3.3.1",
+	"devDependencies": {
+		"grunt": "~0.4.1",
+		"grunt-cli": "~0.1.7",
+		"grunt-contrib-jshint": "~0.4.3",
+		"grunt-contrib-concat": "~0.3.0",
+		"grunt-contrib-uglify": "~0.2.0",
+		"grunt-contrib-coffee": "~0.7.0"
+	},
+	"scripts": {
+		"test": "grunt travis --verbose"
+	}
 }
