--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "jquery-boilerplate",
-	"title": "jQuery Boilerplate",
-	"description": "A jump-start for jQuery plugins development.",
-	"author": "Zeno Rocha",
-	"homepage": "https://github.com/jquery-boilerplate/boilerplate/",
-	"version": "3.3.1",
+	"name": "jcrop-fileinput",
+	"title": "JCrop FileInput",
+	"description": "An image upload widget with client-side cropping features.",
+	"author": "Mathieu Comandon",
+	"homepage": "https://github.com/strycore/jcrop-fileinput",
+	"version": "0.0.1",
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-cli": "~0.1.7",
