--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-	"name": "jcrop-fileinput",
-	"title": "JCrop FileInput",
-	"description": "An image upload widget with client-side cropping features.",
-	"author": "Mathieu Comandon",
-	"homepage": "https://github.com/strycore/jcrop-fileinput",
-	"version": "0.0.1",
-	"devDependencies": {
-		"grunt": "~0.4.1",
-		"grunt-cli": "~0.1.7",
-		"grunt-contrib-jshint": "~0.4.3",
-		"grunt-contrib-concat": "~0.3.0",
-		"grunt-contrib-uglify": "~0.2.0",
-		"grunt-contrib-coffee": "~0.7.0",
-		"grunt-contrib-watch": "~0.5.1"
-	},
-	"scripts": {
-		"test": "grunt travis --verbose"
-	}
+  "name": "jcrop-fileinput",
+  "title": "JCrop FileInput",
+  "description": "An image upload widget with client-side cropping features.",
+  "author": "Mathieu Comandon",
+  "homepage": "https://github.com/strycore/jcrop-fileinput",
+  "version": "0.0.1",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.7",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-contrib-sass": "~0.5.0"
+  },
+  "scripts": {
+    "test": "grunt travis --verbose"
+  }
 }
