--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-sass": "~0.5.0"
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-connect": "~0.5.0"
   },
   "scripts": {
     "test": "grunt travis --verbose"
