--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-browser-sync": "^2.1.3",
     "grunt-cli": "~0.1.7",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-watch": "~0.5.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.1"
   },
   "scripts": {
     "test": "grunt travis --verbose"
