--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "description": "An image upload widget with client-side cropping features.",
   "author": "Mathieu Comandon",
   "homepage": "https://github.com/strycore/jcrop-fileinput",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/strycore/jcrop-fileinput.git"
   },
-  "licenses": {
-    "type": "MIT"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "coffeelint": "^1.10.1",
+    "grunt": "~0.4.5",
     "grunt-browser-sync": "^2.1.3",
-    "grunt-cli": "~0.1.7",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.1"
+    "grunt-cli": "~0.1.13",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "~0.13.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-coffeelint": "~0.0.13",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "scripts": {
     "test": "grunt travis --verbose"
