--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,17 @@
 {
   "name": "jcrop-fileinput",
-  "version": "0.1.2",
+  "version": "0.1.3",
+  "homepage": "https://github.com/strycore/jcrop-fileinput",
+  "authors": [
+      "Mathieu Comandon <strider@strycore.com>"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
     "jquery": "~1.11.3",
     "jcrop": "~2.0.0",
